# OpenSearch

./: .gitignore  CHANGELOG.md  build.gradle  settings.gradle
.github/ISSUE_TEMPLATE/: bug_template.yml  feature_request.yml
.github/workflows/: precommit.yml  version.yml
benchmarks/: build.gradle
buildSrc/: build.gradle  version.properties
buildSrc/src/main/java/org/opensearch/gradle/: DistributionDownloadPlugin.java  OpenSearchTestBasePlugin.java
distribution/src/config/: jvm.options
distribution/tools/plugin-cli/: build.gradle
gradle/: libs.versions.toml  missing-javadoc.gradle  run.gradle
libs/: build.gradle
libs/datafusion/: build.gradle
libs/datafusion/jni/: Cargo.toml
libs/datafusion/jni/src/: aggregator.rs  experiment.rs  lib.rs  main.rs  provider.rs
libs/datafusion/jni/src/provider/test/: mod.rs
libs/datafusion/src/main/java/org.opensearch.datafusion/: DataFrame.java  DataFrameStreamProducer.java  DataFusion.java  ObjectResultCallback.java  RecordBatchStream.java  SessionContext.java  package-info.java
modules/arrow-flight/: build.gradle
modules/ingest-geoip/: build.gradle
modules/lang-expression/: build.gradle
plugins/analysis-ukrainian/: build.gradle
plugins/discovery-gce/: build.gradle
plugins/events-correlation-engine/: build.gradle
plugins/repository-azure/: build.gradle
plugins/repository-gcs/: build.gradle
plugins/repository-hdfs/: build.gradle
rest-api-spec/src/main/resources/rest-api-spec/test/search/: 400_combined_fields.yml
server/: build.gradle
server/src/internalClusterTest/java/org/opensearch/indices/: IndexingMemoryControllerIT.java
server/src/internalClusterTest/java/org/opensearch/remotestore/: RemoteStoreBaseIntegTestCase.java
server/src/main/java/org/opensearch/action/: ActionModule.java
server/src/main/java/org/opensearch/bootstrap/: BootstrapChecks.java  OpenSearch.java  Security.java
test/fixtures/hdfs-fixture/: build.gradle
(+344 files in other folders)
