[package]
name = "datafusion_jni"
version = "0.1.0"
edition = "2021"

[dependencies]
jni = "0.21.1"
datafusion = "42.0.0"
datafusion-table-providers = { version = "0.2.2", features = ["flight"] }
tokio = { version = "1.0", features = ["full"] }
arrow = "53.1.0"
arrow-flight = "53.1.0"
futures = "0.3"
serde_json = "1.0"
tonic = "0.12.3"
bytes = "1.0"

[lib]
crate_type = ["cdylib"]

