[package]
name = "datafusion_jni"
version = "0.1.0"
edition = "2021"

[dependencies]
jni = "0.21.1"
datafusion = "42.1.0"
datafusion-table-providers = { version = "0.2.3", features = ["flight"] }
tokio = { version = "1.41.0", features = ["full"] }
arrow = { version = "53.2.0", features = ["ffi" ] }
arrow-flight = "53.2.0"
futures = "0.3"
serde_json = "1.0.132"
tonic = "0.12.3"
bytes = "1.8.0"

[lib]
crate_type = ["cdylib"]